# asio_samples

./: .appveyor.yml  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  README.md  asio-samples.sln  codecov.yml  echo_client1.vcproj  echo_server.vcproj  nmea_client.vcproj
cmake/ma_boost_asio/: CMakeLists.txt
cmake/ma_boost_chrono/: CMakeLists.txt
cmake/ma_boost_date_time/: CMakeLists.txt
cmake/ma_boost_exception/: CMakeLists.txt
cmake/ma_boost_header_only/: CMakeLists.txt
cmake/ma_boost_link/: CMakeLists.txt
cmake/ma_boost_thread/: CMakeLists.txt
cmake/ma_boost_timer/: CMakeLists.txt
cmake/ma_coverage/: CMakeLists.txt
cmake/ma_gtest/: CMakeLists.txt
cmake/ma_pic_on/: CMakeLists.txt
cmake/ma_qt4_core_support/: CMakeLists.txt
cmake/ma_qt4_gui_support/: CMakeLists.txt
cmake/ma_qt5_core_static/: CMakeLists.txt
cmake/ma_qt5_core_support/: CMakeLists.txt  FindICU.cmake  FindQt5PCRE.cmake
cmake/ma_qt5_gui_static/: CMakeLists.txt  FindQt5PlatformSupport.cmake
cmake/ma_qt5_gui_support/: CMakeLists.txt  FindQt5EventDispatcherSupport.cmake  FindQt5FreeType.cmake  FindQt5HarfBuzzNG.cmake  FindQt5LibPng.cmake  FindQt5PlatformSupport.cmake
cmake/ma_qt5_widgets_support/: CMakeLists.txt
examples/: CMakeLists.txt
examples/asio_multicast_receiver/: CMakeLists.txt
examples/asio_multicast_receiver/src/: receiver.cpp
examples/asio_multicast_sender/: CMakeLists.txt
examples/asio_multicast_sender/src/: sender.cpp
examples/beast_echo_op/: CMakeLists.txt
examples/beast_echo_op/src/: echo_op.cpp
examples/ma_asio_performance_test_client/: CMakeLists.txt
examples/ma_asio_performance_test_client/src/: main.cpp
examples/ma_async_basics/: CMakeLists.txt
examples/ma_async_basics/src/: async_implementation.cpp  async_implementation.hpp  async_interface.hpp  main.cpp
examples/ma_async_basics2/: CMakeLists.txt
examples/ma_async_basics2/src/: async_implementation.cpp  async_implementation.hpp  async_interface.hpp  do_something_handler.hpp  do_something_handler_fwd.hpp  main.cpp
examples/ma_echo_server/: CMakeLists.txt
examples/ma_echo_server/src/: config.cpp  config.hpp  main.cpp
examples/ma_echo_server_core/: CMakeLists.txt
examples/ma_echo_server_core/src/: error.cpp  pooled_session_factory.cpp  session.cpp  session_manager.cpp  simple_session_factory.cpp
examples/ma_nmea_client/: CMakeLists.txt
examples/ma_nmea_client/src/: cyclic_read_session.cpp  cyclic_read_session.hpp  cyclic_read_session_fwd.hpp  error.cpp  error.hpp  frame.hpp  main.cpp
examples/ma_qt_echo_server/: CMakeLists.txt
examples/ma_qt_echo_server/src/: custommetatypes.cpp  custommetatypes.h  execution_config.h  execution_config_fwd.h  main.cpp  mainform.cpp  mainform.h  mainform.ui  meta_type_register_error.h  service.cpp  service.h  service_fwd.h  serviceforwardsignal.h  serviceforwardsignal_fwd.h  serviceservantsignal.h  serviceservantsignal_fwd.h  servicestate.h  signal_connect_error.h
libs/: CMakeLists.txt
libs/ma_async_connect/: CMakeLists.txt
libs/ma_async_connect/include/ma/: async_connect.hpp
libs/ma_bind_handler/: CMakeLists.txt
libs/ma_bind_handler/include/ma/: bind_handler.hpp
libs/ma_codecvt_cast/: CMakeLists.txt
libs/ma_codecvt_cast/include/ma/: codecvt_cast.hpp
libs/ma_compat/: CMakeLists.txt
libs/ma_config/: CMakeLists.txt
libs/ma_config/include/ma/: config.hpp
libs/ma_console_close_signal/: CMakeLists.txt
libs/ma_console_close_signal/include/ma/: console_close_guard.hpp  console_close_signal.hpp  console_close_signal_service.hpp
libs/ma_context_alloc_handler/: CMakeLists.txt
libs/ma_context_alloc_handler/include/ma/: context_alloc_handler.hpp
libs/ma_context_invoke_handler/: CMakeLists.txt
libs/ma_context_invoke_handler/include/ma/: context_invoke_handler.hpp
libs/ma_context_wrapped_handler/: CMakeLists.txt
libs/ma_custom_alloc_handler/: CMakeLists.txt
libs/ma_cyclic_buffer/: CMakeLists.txt
libs/ma_handler_ptr/: CMakeLists.txt
libs/ma_handler_storage/: CMakeLists.txt
libs/ma_helpers/: CMakeLists.txt
libs/ma_intrusive_list/: CMakeLists.txt
libs/ma_io_service_pool/: CMakeLists.txt
libs/ma_io_service_pool/src/: io_service_pool.cpp
libs/ma_limited_int/: CMakeLists.txt
libs/ma_lockable_wrapped_handler/: CMakeLists.txt
libs/ma_service_base/: CMakeLists.txt
libs/ma_shared_ptr_factory/: CMakeLists.txt
libs/ma_sp_intrusive_list/: CMakeLists.txt
libs/ma_sp_singleton/: CMakeLists.txt
libs/ma_steady_deadline_timer/: CMakeLists.txt
libs/ma_strand/: CMakeLists.txt
libs/ma_strand/include/ma/: strand.hpp  (+1 more)
libs/ma_thread_group/: CMakeLists.txt
libs/ma_windows_console_signal/: CMakeLists.txt
libs/ma_windows_console_signal/src/: console_signal_service.cpp
ma_async_connect/: CMakeLists.txt
ma_bind_handler/: CMakeLists.txt
ma_config/: CMakeLists.txt
ma_qt_echo_server/: CMakeLists.txt
ma_qt_echo_server/src/: qt_echo_server.rc
ma_windows_console_signal/: CMakeLists.txt
ma_windows_console_signal/src/: console_signal_service.cpp
test/: CMakeLists.txt  handler_storage_test.cpp  lockable_wrapper_test.cpp  shared_ptr_factory_test.cpp  sp_singleton_test.cpp  windows_console_signal_test.cpp
test/handler_storage_test/: main.cpp
test/ma_async_connect_test/: CMakeLists.txt
test/ma_async_connect_test/src/: main.cpp
test/ma_custom_alloc_handler_test/: CMakeLists.txt
test/ma_custom_alloc_handler_test/src/: custom_alloc_handler_test.cpp
test/ma_cyclic_buffer_test/: CMakeLists.txt
test/ma_cyclic_buffer_test/src/: cyclic_buffer_test.cpp
test/ma_handler_allocator_test/: CMakeLists.txt
test/ma_handler_allocator_test/src/: handler_allocator_test.cpp
test/ma_handler_storage_test/: CMakeLists.txt
test/ma_handler_storage_test/src/: handler_storage_test.cpp
test/ma_lockable_wrapper_test/: CMakeLists.txt
test/ma_shared_ptr_factory_test/: CMakeLists.txt
test/ma_sp_singleton_test/: CMakeLists.txt
test/ma_sp_singleton_test/src/: sp_singleton_test.cpp
test/ma_windows_console_signal_test/: CMakeLists.txt
test/ma_windows_console_signal_test/src/: windows_console_signal_test.cpp
(+484 files in other folders)
