#
# Copyright (c) 2015-2016 Marat Abrarov (abrarov@gmail.com)
#
# Distributed under the Boost Software License, Version 1.0. (See accompanying
# file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt)
#

cmake_minimum_required(VERSION 2.8.11)
project(examples)

#add_subdirectory(ma_asio_performance_test_client)
#add_subdirectory(ma_async_basics)
#add_subdirectory(ma_async_basics2)
add_subdirectory(ma_echo_server)
add_subdirectory(ma_echo_server_core)
#add_subdirectory(ma_nmea_client)
#add_subdirectory(ma_qt_echo_server)