#
# Copyright (c) 2015-2016 Marat Abrarov (abrarov@gmail.com)
#
# Distributed under the Boost Software License, Version 1.0. (See accompanying
# file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt)
#

cmake_minimum_required(VERSION 2.8.11)
project(libs)

add_subdirectory(ma_async_connect)
add_subdirectory(ma_bind_handler)
add_subdirectory(ma_codecvt_cast)
add_subdirectory(ma_compat)
add_subdirectory(ma_config)
add_subdirectory(ma_console_close_signal)
add_subdirectory(ma_context_alloc_handler)
add_subdirectory(ma_context_invoke_handler)
add_subdirectory(ma_context_wrapped_handler)
add_subdirectory(ma_custom_alloc_handler)
add_subdirectory(ma_cyclic_buffer)
add_subdirectory(ma_handler_ptr)
add_subdirectory(ma_handler_storage)
add_subdirectory(ma_helpers)
add_subdirectory(ma_intrusive_list)
add_subdirectory(ma_io_service_pool)
add_subdirectory(ma_limited_int)
add_subdirectory(ma_lockable_wrapped_handler)
add_subdirectory(ma_service_base)
add_subdirectory(ma_shared_ptr_factory)
add_subdirectory(ma_sp_intrusive_list)
add_subdirectory(ma_sp_singleton)
add_subdirectory(ma_steady_deadline_timer)
add_subdirectory(ma_strand)
add_subdirectory(ma_thread_group)
add_subdirectory(ma_windows_console_signal)
